--- a/playbook.yml
+++ b/playbook.yml
@@ -14,16 +14,11 @@
           - curl 
           - gnupg2 
           - software-properties-common
-    - name: install docker
+    - name: install docker repo
       become: true
       become_user: root
       shell:
          curl -fsSL https://download.docker.com/linux/debian/gpg | gpg --dearmor -o /usr/share/keyrings/docker-archive-keyring.gpg echo "deb [arch=amd64 signed-by=/usr/share/keyrings/docker-archive-keyring.gpg] https://download.docker.com/linux/debian $(lsb_release -cs) stable" | tee /etc/apt/sources.list.d/docker.list 
-    - name: install docker
-      become: true
-      become_user: root
-      shell:
-       curl -s https://packages.cloud.google.com/apt/doc/apt-key.gpg | apt-key add apt-add-repository "deb http://apt.kubernetes.io/ kubernetes-xenial main"
     - name: Update apt-get repo and cache
       apt: update_cache=yes force_apt_get=yes cache_valid_time=3600
     - name: install docker
@@ -35,6 +30,3 @@
           - docker-ce 
           - docker-ce-cli 
           - containerd.io
-          - kubelet 
-          - kubeadm 
-          - kubectl
